--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -46,8 +46,8 @@
   opacity: 0.6;
 }
 */
-
-/*.main-nav--opened .main-nav__toggle {
+/*
+.main-nav--opened .main-nav__toggle {
   display: none;
 }
 */
